--- a/Styles/Blog.css
+++ b/Styles/Blog.css
@@ -92,8 +92,9 @@ li a {
 
 }
 .banner-content{
-    width: 585px;
+    /* width: 585px; */
     /* height: 356px; */
+    width: 1fr;
     
 }
 .banner-hi{
@@ -162,6 +163,7 @@ li a {
     /* padding: 70px 40px; */
     margin: 100px;
     border: 1px solid #000000;
+    width: 100%;
 }
 
 .about-description{
@@ -400,6 +402,53 @@ footer input[type="text"], footer input[type="email"], footer textarea{
 /* Media Query for responsive  */
 
 @media screen and (max-width: 575px) {
+    /* nav section */
+    nav{
+        justify-content: flex-start;
+        padding: 10px;
+        margin: 0px;
+    }
+    ul{
+        gap: 20px;
+    }
+
+    /* Hero section */
+    .banner{
+        flex-direction: column-reverse;
+        /* gap: 20px; */
+        /* margin: 0px 0px 0px 200px; */
+        margin: 0px;
+        margin-bottom: 50px;
+    }
+    .banner-description{
+        width: 100%;
+    }
+    .banner-gap{
+        align-items: center;
+        justify-content: space-evenly;
+       gap: 15px;
+    }
+
+    /* About Section for Responsive */
+    .about{
+        margin: 20px;
+    }
+    .about-details {
+    padding: 0px;
+   
+}
+.about-div{
+    margin: 0px;
+    padding: 10px;
+    width: 100%;
+}
+.about-list{
+    flex-direction: column;
+}
+/* card section are from there  */
+.card{
+    margin-top: 50px;
+}
     .card-list{
         flex-direction: column;
     }
@@ -416,6 +465,11 @@ footer input[type="text"], footer input[type="email"], footer textarea{
     width: 70%;
     
    
+}
+
+/* Section page are started here  */
+.section{
+    margin-top: 50px;
 }
 .section-content{
     flex-direction: column;
