add another design

--- a/Styles/Blog.css
+++ b/Styles/Blog.css
@@ -163,7 +163,7 @@ li a {
 .about-div{
     background-color: #FFFFFF;
     /* padding: 70px 40px; */
-    margin: 100px;
+    /* margin: 100px; */
     border: 1px solid #000000;
     width: 100%;
 }
